public/resources/css/styles.css
/* HTML5 ✰ Boilerplate
 * ==|== normalize ==========================================================
*/
article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
audio:not([controls]) { display: none; }
[hidden] { display: none; }

html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
body { margin: 0; font-size: 13px; line-height: 1.231; }
body, button, input, select, textarea { font-family: sans-serif; color: #222; }

::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
::selection { background: #fe57a1; color: #fff; text-shadow: none; }

a { color: #00e; }
a:visited { color: #551a8b; }
a:hover { color: #06e; }
a:focus { outline: thin dotted; }
a:hover, a:active { outline: 0; }

abbr[title] { border-bottom: 1px dotted; }
b, strong { font-weight: bold; }
blockquote { margin: 1em 40px; }
dfn { font-style: italic; }
hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
ins { background: #ff9; color: #000; text-decoration: none; }
mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
pre, code, kbd, samp { font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 1em; }
pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
q { quotes: none; }
q:before, q:after { content: ""; content: none; }
small { font-size: 85%; }
sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
sup { top: -0.5em; }
sub { bottom: -0.25em; }
ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
dd { margin: 0 0 0 40px; }
nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }
img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }
svg:not(:root) { overflow: hidden; }
figure { margin: 0; }

form { margin: 0; }
fieldset { border: 0; margin: 0; padding: 0; }
label { cursor: pointer; }
legend { border: 0; *margin-left: -7px; padding: 0; }
button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }
button, input { line-height: normal; *overflow: visible; }
table button, table input { *overflow: auto; }
button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; }
input[type="checkbox"], input[type="radio"] { box-sizing: border-box; }
input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
textarea { overflow: auto; vertical-align: top; resize: vertical; }
input:valid, textarea:valid {  }
input:invalid, textarea:invalid { background-color: #f0dddd; }

table { border-collapse: collapse; border-spacing: 0; }
td { vertical-align: top; }

/* ==|== primary styles =====================================================
   Author: Unplagged Team
   ========================================================================== */

body { 
  background-color: #f5f5f5;
  font-family: Helvetica, Arial, Sans-serif;
  color: #323232;
}

#main-header{
  color: white;
  background: #333333;
  background: -moz-linear-gradient(top, #4c4f54 0%, #000000 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4c4f54), color-stop(100%,#000000));
  background: -webkit-linear-gradient(top, #4c4f54 0%,#000000 100%);
  background: -o-linear-gradient(top, #4c4f54 0%,#000000 100%);
  background: -ms-linear-gradient(top, #4c4f54 0%,#000000 100%);
  background: linear-gradient(top, #4c4f54 0%,#000000 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4f54', endColorstr='#000000',GradientType=0 );
  padding: 12px 0;
  position: relative;
  margin-bottom: 115px;
}

.js #main-header .dropdown-button {
  position: absolute;
  float: right;
  bottom: -10px;
  left: 90%;
  cursor: pointer;
}

.js #main-header .dropdown-button.arrow-up {
  position: absolute;
  float: right;
  bottom: 0px;
  right: 20px;
}

.arrow-up {
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;

  border-bottom: 10px solid #f5f5f5;
}

.arrow-down{
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid black;
}

#page {
  width: 90%;
  margin: 0 auto 0;
  padding: 0 1.5625% 1.5625%;
  background-color: white;
  -moz-box-shadow: 0 0 5px 5px #BBB;
  -webkit-box-shadow: 0 0 5px 3px #BBB;
  box-shadow: 0 0 5px 3px #BBB;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border-radius: 2px;
}

#settings-panel{ 
  margin: auto;
  width: 90%;
}

#settings-panel a {
  color: #8b8f91;
}

#header #settings-panel #avatar {
  float: left;
  width: 75px;
}

#header #settings-panel #login-actions {
  float: left;
  width: 580px;
  color: white;
  font-size: 9pt;
  padding-top: 17px;
}

#header #settings-panel #settings {
  float: left;
  width: 350px;
  text-align: right;

}

#header {
  position: relative;
  top: -80px;
  magin-bottom: -80px;
  background: url('/resources/images/header.png') no-repeat right center #40C0E9;
  height: 142px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border-radius: 2px;
}

#header h1 {
  background: url('/resources/images/logo.png') no-repeat center center transparent;
  width: 182px;
  height: 53px;
  position: relative;
  top: 15px;
  left: 20px;
}

#header #top-menu ul {
  list-style-type: none;
  padding: 17px 0 0 10px;
  float: left;
}

#header #top-menu li {
  float: left;
  margin-right: 5px;
}

#header #top-menu li a {
  background-image: url('/resources/images/topmenu-btn_center.png');
  padding: 11px 0 9px 0;
  color: white;
  text-decoration: none;
  font-size: 9pt;
}

#header #top-menu li a .left {
  background-image: url('/resources/images/topmenu-btn_left.png');
  background-repeat: no-repeat;
  padding: 11px 10px 9px 0;
}

#header #top-menu li a .right {
  background-image: url('/resources/images/topmenu-btn_right.png');
  background-repeat: no-repeat;
  background-position: right;
  padding: 11px 0 9px 10px;
}

#header #top-menu li a:hover,
#header #top-menu li.active a{
  background-image: url('/resources/images/topmenu-btn_center_hover.png');
  color: #666666;
}

#header #top-menu li a:hover .left,
#header #top-menu li.active a .left{
  background-image: url('/resources/images/topmenu-btn_left_hover.png');
}

#header #top-menu li a:hover .right,
#header #top-menu li.active a .right{
  background-image: url('/resources/images/topmenu-btn_right_hover.png');
}

#header #top-menu li a .home {
  background-image: url('/resources/images/home_icon.png');
  padding: 3px 6px 1px 6px;
}

#header #top-menu li a:hover .home,
#header #top-menu li.active a .home{
  background-image: url('/resources/images/home_icon_hover.png');
}

#content {
  min-height: 500px;
  margin-top: -60px;
}

h2 {
  color: #40c0e9;
  margin: 0;
  font-weight: 100;
  font-size: 20pt;
  padding: 0 0 0 0;
}

p {
  font-size: 12pt;
}

#content #main {
  width: 705px;
  padding-left: 25px;
}

#content #sub-menu {
  float: right;
  width: 310px;
}

table.default {
  width: 100%;
  background-color: #fbfbfb;
  border: 1px #d2d5d7 solid;
  margin: 20px 0;
  -webkit-border-radius: 4px 4px;
  -moz-border-radius: 4px 4px;
  border-radius: 4px 4px;
  font-size: 11pt
}

table.default th {
  background-color: #ebeced;
  color: #666666;
  text-align: left;
  padding: 3px 5px 3px 15px;
  font-weight: bold;
}

table.default td {
  background-color: #ebeced;
  color: #555555;
  text-align: left;
  padding: 12px 5px 12px 15px;
  font-weight: normal;
}

table.default .even td {
  background-color: #f7f7f7;
}

a {
  color: #226e87;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}


/* zend form */
.zend_form,
.zend_form  dd {
  padding: 0;
  margin: 0;
}

.zend_form  dl {
  margin: 15px 0 0 15px;
}

.zend_form label {
  font-size: 11pt;
}
.zend_form input[type='text'],
.zend_form input[type='password'],
.zend_form input[type='file'],
.zend_form select,
.zend_form textarea
{
  font-family: Arial, sans-serif;
  background: #ffffff;
  width: 350px;
  padding: 3px 5px 3px;
  text-decoration: none;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border: 1px solid #c0c0c0;
  position: relative;
  font-size: 11pt;
  margin-bottom: 5px;
}
.zend_form input[type='file']
{
  border: 0;
}

.zend_form textarea
{
  width: 500px;
  max-width: 500px;
  height: 250px;
  max-height: 250px;
  margin-bottom: 15px;
}

.zend_form textarea.auto
{
  max-width: auto;
  max-height: auto;
}

.zend_form ul.errors {
  color: red;
  background-color: #ffedf1;
  margin: 0 0 5px 0;
  padding: 3px;
}

.zend_form ul.errors li {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.zend_form fieldset {
  border: 0;
  background-color: #ebeced;
  -webkit-border-radius: 5px;
  margin: 5px 0 5px 0;
}

.zend_form fieldset legend {
  margin: 0;
  padding: 0;
  font-weight: normal;
  font-size: 13pt;
}



.zend_form input[type='submit'],
.zend_form input[type='submit']:visited {
  background: #313438 url('/resources/images/alert-overlay.png') repeat-x; 
  display: inline-block; 
  padding: 5px 10px 6px;
  margin-left: 15px;
  color: #fff; 
  text-decoration: none;
  -moz-border-radius: 5px; 
  -webkit-border-radius: 5px;
  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
  text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
  position: relative;
  cursor: pointer;
  font-size: 10pt;
  margin-top: 5px;

}

.zend_form input[type='submit']:hover	{ 
  background-color: #111; color: #fff;
}
.zend_form input[type='submit']:active							{ top: 1px; }


.flash-messages {
  background: #fefabf;
  padding: 3px;
  margin: 5px 10px 5px 0;
}

/* ==|== non-semantic helper classes ======================================== */
.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
.ir br { display: none; }
.hidden { display: none !important; visibility: hidden; }
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
.invisible { visibility: hidden; }
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }


/* ==|== media queries ====================================================== */

@media only screen and (min-width: 480px) {


}

@media only screen and (min-width: 768px) {

}



/* ==|== print styles ======================================================= */

@media print {
  * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } 
  a, a:visited { text-decoration: underline; }
  a[href]:after { content: " (" attr(href) ")"; }
  abbr[title]:after { content: " (" attr(title) ")"; }
  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; } 
  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
  thead { display: table-header-group; }
  tr, img { page-break-inside: avoid; }
  img { max-width: 100% !important; }
  @page { margin: 0.5cm; }
  p, h2, h3 { orphans: 3; widows: 3; }
  h2, h3 { page-break-after: avoid; }
}

